# digitalTwin

./: .gitignore  AI_INSIGHTS_COMPLETION_REPORT.md  AI_INSIGHTS_IMPLEMENTATION.md  DEVICE_STATUS_HIDDEN_DOCUMENTATION.md  Dockerfile  FINAL_REPORT_DEVICE_STATUS_HIDDEN.md  GEMINI_API_SETUP.md  GEMINI_API_VERIFICATION.md  README.md  REAL_DATA_INTEGRATION_REPORT.md  RECOMMENDATIONS_ENHANCEMENT_REPORT.md  acquire_device_data.py  analyze_alignment_final.py  analyze_parameter_alignment.py  api.py  avg_temp_past_hour.flux  bmkg.php  bmkg_data_collector.py  check-grafana-integration.sh  check-ports.sh  check-system-status.sh  check_alignment_simple.py  check_api_container.py  check_api_status.sh  check_telegraf_bmkg.py  check_ui.js  collect_training_data.py  debug_humidity.html  debug_humidity_display.py  deploy-react-container.sh  deploy-react.sh  device_list.csv  diagnose-grafana-integration.sh  diagnose_api_endpoints.py  diagnose_web_app.sh  diskusi1.md  docker-compose.yml  enhanced_api.py  example_endpoint.py  final_alignment_check.py  (+65 more)
docs/: BMKG_WEATHER_VERIFICATION_REPORT.md  DIGITAL_TWIN_VISUALIZATION_RECOMMENDATIONS.md  ML_MODEL_TRAINING_COMPLETE.md  ML_TRAINING_DATA_GUIDE.md  TREND_ANALYSIS_VERIFICATION_REPORT.md  daily_trend_queries.md  dashboard_ready_queries.md  environmental_stats_api.md  grafana-integration.md  manual_flux_queries.md  simple_trend_queries.md
flux_queries/: __init__.py  data.py  environmental.py  environmental_backup.py  environmental_fixed.py  environmental_old2.py  humidity.py  ml_training_queries.py  room_data.py  temperature.py  (+1 more)
utils/: auth.py  (+1 more)
(+68 files in other folders)
