[tool.poetry]
name = "digitaltwin"
version = "0.1.0"
description = "A project for interacting with InfluxDB"
authors = ["Jatniko NM <jatnikonm@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
influxdb-client = {extras = ["ciso"], version = "^1.40.0"}
requests = "^2.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
